--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sitemate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.ts",
   "scripts": {
     "start": "nodemon main",
     "test": "jest"
