config(package): add pointinstall

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
+    "postinstall": "npm install",
     "start": "nodemon main",
     "test": "jest"
   },
